--- a/index.html
+++ b/index.html
@@ -25,6 +25,41 @@
             #bar { background-color: #B4F5B4; width:0%; height:20px; border-radius: 3px; }
             #percent { position:absolute; display:inline-block; top:3px; left:48%; }
         </style>
+
+        <style>
+
+            body {
+                font: 10px sans-serif;
+            }
+
+            .axis path,
+            .axis line {
+                fill: none;
+                stroke: #000;
+                shape-rendering: crispEdges;
+            }
+
+            .x.axis path {
+                display: none;
+            }
+            .d3-tip {
+                line-height: 1;
+                font-weight: bold;
+                padding: 12px;
+                background: rgba(0, 0, 0, 0.8);
+                color: #fff;
+                border-radius: 2px;
+            }
+            .datapoint:hover{
+                fill: steelblue;
+            }
+            .line {
+                fill: none;
+                stroke: steelblue;
+                stroke-width: 1.5px;
+            }
+
+        </style>
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -39,7 +74,11 @@
         <input type="file" id="files" name="files[]" multiple />
         <output id="list"></output>
 
-        <!--<form id="myForm" action="javascript:sendFile()" method="post" enctype="multipart/form-data">-->
+        <div id="dna"></div>
+        <div id="dna2"></div>
+
+
+                <!--<form id="myForm" action="javascript:sendFile()" method="post" enctype="multipart/form-data">-->
         <!--<form id="myForm" action="http://localhost:5000/upload" method="post" enctype="multipart/form-data">
             <input type="file" name="file">
             <input type="submit" value="Upload">
@@ -109,8 +148,11 @@
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
         <script src="js/raphael.js"></script>
-        <script src="js/analysis.js"></script>
-        <script src="js/main.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
+        <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
+        <script src="js/draw.js"></script>
+        <script src="js/analysis-jon.js"></script>
+        <script src="js/main-jon.js"></script>
 
 
 
