--- a/index.html
+++ b/index.html
@@ -1,169 +1,72 @@
-<!DOCTYPE html>
+<!doctype html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
+        <title>Genome Browser Visualization</title>
+        <link rel="icon" type="image/ico" href="favicon.ico"/>
+
+
+        <!--=========================  CSS  =========================-->
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 
+        <link rel="stylesheet" href="css/d3_style.css">
+        <!--=========================================================-->
 
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.js"></script>
-        <script src="http://malsup.github.com/jquery.form.js"></script>
-        <style>
-            form { display: block; margin: 20px auto; background: #eee; border-radius: 10px; padding: 15px }
-            #progress { position:relative; width:400px; border: 1px solid #ddd; padding: 1px; border-radius: 3px; }
-            #bar { background-color: #B4F5B4; width:0%; height:20px; border-radius: 3px; }
-            #percent { position:absolute; display:inline-block; top:3px; left:48%; }
-        </style>
+        <!--=========================  JS  ==========================-->
+        <script src="js/libs/modernizr-2.8.3.min.js"></script>
+        <script src="js/libs/jquery-1.11.3.min.js"></script>
+        <script src="js/libs/d3-3.5.6.min.js"></script>
+        <script src="js/libs/d3-tip-0.6.7.js"></script>
 
-        <style>
-
-            body {
-                font: 10px sans-serif;
-            }
-
-            .axis path,
-            .axis line {
-                fill: none;
-                stroke: #000;
-                shape-rendering: crispEdges;
-            }
-
-            .x.axis path {
-                display: none;
-            }
-            .d3-tip {
-                line-height: 1;
-                font-weight: bold;
-                padding: 12px;
-                background: rgba(0, 0, 0, 0.8);
-                color: #fff;
-                border-radius: 2px;
-            }
-            .datapoint:hover{
-                fill: steelblue;
-            }
-            .line {
-                fill: none;
-                stroke: steelblue;
-                stroke-width: 1.5px;
-            }
-
-        </style>
+        <script src="js/main.js"></script>
+        <script src="js/analysis.js"></script>
+        <script src="js/draw.js"></script>
+        <!--=========================================================-->
     </head>
+
+
     <body>
         <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please
+            <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.
+        </p>
         <![endif]-->
 
-        <!-- Add your site or application content here -->
 
-
+        <!--=================================================  BODY ===================================================-->
 
         <!-- FILE UPLOAD -->
         <input type="file" id="files" name="files[]" multiple />
         <output id="list"></output>
+        <script src="js/upload-file.js"></script>
 
+        <!-- VISUALIZATION -->
         <div id="dna"></div>
         <div id="dna2"></div>
 
 
-                <!--<form id="myForm" action="javascript:sendFile()" method="post" enctype="multipart/form-data">-->
-        <!--<form id="myForm" action="http://localhost:5000/upload" method="post" enctype="multipart/form-data">
-            <input type="file" name="file">
-            <input type="submit" value="Upload">
-            </form>
--->
-        <!--<form id="myForm" action="javascript:sendFile()" method="post" enctype="multipart/form-data">
-        <form action="http://localhost:5000/upload" method="post" enctype="multipart/form-data">
-            <input type="file" name="file">
-            <input type="submit" value="Upload">
-        </form>-->
-<!--
-        <div id="progress">
-            <div id="bar"></div>
-            <div id="percent">0%</div >
-        </div>
-        <br/>
 
-        <div id="message"></div>
 
-        <script>
-            $(document).ready(function()
-            {
-
-                var options = {
-                    beforeSend: function()
-                    {
-                        $("#progress").show();
-                        //clear everything
-                        $("#bar").width('0%');
-                        $("#message").html("");
-                        $("#percent").html("0%");
-                    }/*,
-                    uploadProgress: function(event, position, total, percentComplete)
-                    {
-                        $("#bar").width(percentComplete+'%');
-                        $("#percent").html(percentComplete+'%');
-
-                    },
-                    success: function()
-                    {
-                        $("#bar").width('100%');
-                        $("#percent").html('100%');
-
-                    },
-                    complete: function(response)
-                    {
-                        $("#message").html("<font color='green'>"+response.responseText+"</font>");
-                    },
-                    error: function()
-                    {
-                        $("#message").html("<font color='red'> ERROR: unable to upload files</font>");
-
-                    }
-*/
-                };
-
-                $("#myForm").ajaxForm(options);
-
-            });
-
-        </script>
--->
-
-        <!-- VISUALIZATION -->
-
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/raphael.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
-        <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
-        <script src="js/draw.js"></script>
-        <script src="js/analysis-jon.js"></script>
-        <script src="js/main-jon.js"></script>
-
+        <!--===========================================================================================================-->
 
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X');ga('send','pageview');
+                    function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+                e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+                e.src='https://www.google-analytics.com/analytics.js';
+                r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
         </script>
     </body>
 </html>
