--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <script src="js/libs/jquery-1.11.3.min.js"></script>
         <script src="js/libs/d3-3.5.6.min.js"></script>
         <script src="js/libs/d3-tip-0.6.7.js"></script>
+        <script src="js/libs/md5.min.js"></script>
 
         <script src="js/main.js"></script>
         <script src="js/analysis.js"></script>
@@ -49,6 +50,18 @@
         <output id="list"></output>
         <script src="js/upload-file.js"></script>
 
+        <button type="button" onclick="destroyAll(true)">Borrar</button>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <input type="text" id="patternSearch" value="bcb">
+        <select id="dSearch">
+            <option value="0">0</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+        </select>
+        <button type="button" onclick="seachPoints()">Buscar</button>
+
+
         <!-- VISUALIZATION -->
         <div id="dna"></div>
         <div id="dna2"></div>
@@ -60,13 +73,13 @@
 
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
+        <!--script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
                     function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
                 e=o.createElement(i);r=o.getElementsByTagName(i)[0];
                 e.src='https://www.google-analytics.com/analytics.js';
                 r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
             ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        </script>
+        </script-->
     </body>
 </html>
