--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <script src="js/libs/jquery-1.11.3.min.js"></script>
         <script src="js/libs/d3-3.5.6.min.js"></script>
         <script src="js/libs/d3-tip-0.6.7.js"></script>
-        <script src="js/libs/md5.min.js"></script>
+        <script src="js/libs/md5.js"></script>
 
         <script src="js/main.js"></script>
         <script src="js/analysis.js"></script>
