--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 
 
         <!-- VISUALIZATION -->
-        <div id="dna"></div>
-        <div id="dna2"></div>
+        <div id="lineSeq"></div>
+        <div id="lineSeq2"></div>
 
 
 
