First version that works!

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <script src="js/libs/md5.js"></script>
 
         <script src="js/main.js"></script>
-        <script src="js/analysis.js"></script>
+        <script src="js/server.js"></script>
         <script src="js/draw.js"></script>
         <!--=========================================================-->
     </head>
@@ -52,14 +52,14 @@
 
         <button type="button" onclick="destroyAll(true)">Borrar</button>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <input type="text" id="patternSearch" value="bcb">
+        <input type="text" id="patternSearch" value="aba">
         <select id="dSearch">
             <option value="0">0</option>
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
         </select>
-        <button type="button" onclick="seachPoints()">Buscar</button>
+        <button type="button" onclick="searchPoints()">Buscar</button>
 
 
         <!-- VISUALIZATION -->
