Check draw.js (styles, global variables)

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
 
-        <link rel="stylesheet" href="css/d3_style.css">
+        <link rel="stylesheet" href="css/d3_styles.css">
         <!--=========================================================-->
 
         <!--=========================  JS  ==========================-->
