--- a/client/index.html
+++ b/client/index.html
@@ -53,7 +53,7 @@
     <div class="container start-view">
         <div class="row">
             <div class="col-md-4 col-md-offset-4">
-                <div class="login-panel panel panel-default">
+                <div class="panel panel-default login-panel">
                     <div class="panel-heading">
                         <h3 class="panel-title">Please Sign In</h3>
                     </div>
