Grid option added

--- a/client/index.html
+++ b/client/index.html
@@ -127,6 +127,10 @@
                     </select>
                 </div>
 
+                <div style="float:left;margin-left:5px;margin-right:5px;margin-top:4px">
+                    <input type="checkbox" id="grid" title="" onClick="drawGrid()">Grid<br>
+                </div>
+
                 <div style="float:left;margin-top:4px;margin-left:5px;margin-right:5px;">
                     <button type="button" onclick="searchPattern()">Search pattern</button>
                 </div>
