--- a/client/index.html
+++ b/client/index.html
@@ -115,7 +115,7 @@
                 </div-->
 
                 <div style="float:left;margin-top:4px;margin-left:30px;margin-right:5px;">
-                    <input type="text" id="patternSearch" title="pattern to search, according to the window and number of bins">
+                    <input type="text" id="patternSearch" title="pattern to search, according to the window and number of bins. You can also search for intervals with 'start-end' and by gene names">
                 </div>
 
                 <div style="float:left;margin-top:4px;margin-left:5px;margin-right:5px;">
